Add inference flag and non-inference indices array to field caps